# zhaihuayun

./: README.md
IDE/: LICENSE  README.md  bundle.json
IDE/hw_openocd/: package.json
IDE/tool_burncli/: package.json  readme_en.txt  readme_zh.txt
IDE/tool_burncli/config/: burn.config  preference.config
SDK/: License.md  README.md  Version.md  bundle.json
SDK/application/board_sample/dimming/: dimming_sample.c  dimming_sample.h
SDK/application/board_sample/key/: key_sample.c  key_sample.h  matrixkey_sample.c  matrixkey_sample.h
SDK/application/board_sample/led/: led_sample.c  led_sample.h
SDK/application/board_sample/pulses/: pulses_sample.c  pulses_sample.h
SDK/application/board_sample/softserial/: softserial_sample.c  softserial_sample.h
SDK/application/middleware_sample/mcs_65demo/: readme.txt
SDK/application/middleware_sample/pmsm_sensorless_1shunt_foc/: readme.txt
SDK/application/middleware_sample/pmsm_sensorless_2shunt_foc/: readme.txt
SDK/application/user/: main.c
SDK/board/dimming/inc/: dimming.h
SDK/board/dimming/src/: dimming.c
SDK/board/key/inc/: key.h  matrixkey.h
SDK/board/key/src/: key.c  matrixkey.c
SDK/board/led/inc/: led.h
SDK/board/led/src/: led.c
SDK/board/pulses/inc/: pulses.h
SDK/board/pulses/src/: pulses.c
SDK/board/softserial/inc/: softserial.h
SDK/board/softserial/src/: softserial.c
SDK/chip/3061h/: codecopy.json  locktype.h  sysctrl.h
SDK/chip/3061h/chipinit/: chipinit.h
SDK/chip/3061h/fotp/: fotp.h
SDK/chip/3061h/ip_crg/: ip_crg_common.h
SDK/chip/3065h/: baseaddr.h  codecopy.json  startup.S  systick.h
SDK/chip/3065h/chipinit/: chipinit.c
SDK/chip/3065h/fotp/: fotp_info_read.h
SDK/chip/3065h/ip_crg/: ip_crg_common.c
SDK/chip/au/: codecopy.json  flash.lds  info.h  ioconfig.h  sysctrl.h
SDK/chip/svd/: 3061HRPIKZ.svd  3065HRPIRZ.svd  AU301LDF51.svd  AU302NDF51.svd
SDK/drivers/debug/src/: debug.c
SDK/generatecode/: feature.h  main.h  system_init.c
SDK/middleware/control_library/: mcs_assert.h  mcs_curr_ctrl.c  mcs_curr_ctrl.h  mcs_filter.c  mcs_filter.h  mcs_fosmo.c  mcs_fosmo.h  mcs_fw_ctrl.c  mcs_fw_ctrl.h  mcs_if_ctrl.c  mcs_if_ctrl.h  mcs_math.c  mcs_math.h  mcs_math_const.h  mcs_mtr_param.h  mcs_pid_ctrl.c  mcs_pid_ctrl.h  mcs_pll.c  mcs_pll.h  mcs_r1_svpwm.c  mcs_r1_svpwm.h  mcs_ramp_mgmt.c  mcs_ramp_mgmt.h  mcs_smo_4th.c  mcs_smo_4th.h  mcs_spd_ctrl.c  mcs_spd_ctrl.h  mcs_startup.c  mcs_startup.h  mcs_svpwm.c  mcs_svpwm.h  mcs_typedef.h  pfc_curr_ctrl.c  pfc_curr_ctrl.h  pfc_volt_ctrl.c  pfc_volt_ctrl.h
SDK/middleware/hisilicon/loaderboot/: BUILD.gn  build.py
SDK/middleware/hisilicon/loaderboot/include/: loaderboot.h  utils.h
SDK/middleware/hisilicon/loaderboot/scripts/: loaderboot.lds
SDK/middleware/hisilicon/loaderboot/source/: main.c
SDK/middleware/hisilicon/loaderboot/source/drivers_adapt/inc/: crc_adapt.h  flash_adapt.h  timer_adapt.h  uart_adapt.h
SDK/middleware/hisilicon/loaderboot/source/drivers_adapt/src/: crc_adapt.c  flash_adapt.c  timer_adapt.c  uart_adapt.c
SDK/middleware/hisilicon/loaderboot/source/fake_drivers/crg/common/inc/: crg.h
SDK/middleware/hisilicon/loaderboot/source/fake_drivers/crg/inc/: crg_ip.h
SDK/middleware/hisilicon/loaderboot/source/fake_drivers/crg/src/: crg.c
SDK/middleware/hisilicon/loaderboot/source/loader/inc/: cmd.h  handshake.h  serial_dw.h  transfer.h
SDK/middleware/hisilicon/loaderboot/source/loader/src/: cmd.c  handshake.c  loadertype.c  reset.c  stack_protect.c  uart_rcv.c  uart_xmit.c
SDK/middleware/hisilicon/loaderboot/startup/: riscv_init.S
mcs_gch_hardware_driver/: board.json
mcs_gch_hardware_driver/chip/3065h/: chipinc.h  flash.lds  interrupt_ip.h  ioconfig.h  sysctrl.h
mcs_gch_hardware_driver/chip/3065h/fotp/: fotp_info_read.c
mcs_gch_hardware_driver/chip/svd/: 3065HRPICZ.svd  AU302PDF51.svd
mcs_gch_hardware_driver/drivers/acmp/src/: acmp.c
mcs_gch_hardware_driver/user/: main.c
mcs_gch_hardware_driver/user/generatecode/: feature.h  main.h  system_init.c
(+498 files in other folders)
